clusters/dextek/apps/flux-system/flux-operator/instance/github/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  hostnames:
    - fluxhook.plexuz.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
